<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:paddingStart="8dp"
        android:paddingTop="15dp"
        android:paddingEnd="8dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/type"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvWalletDetailData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@color/window_background" />

</LinearLayout>