<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_main_app" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbars="none">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_the_amount"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/etRequestAmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@color/window_background"
                android:hint="@string/enter_the_amount"
                android:inputType="number"
                android:labelFor="@+id/tvSubmit"
                android:padding="15dp"
                android:textSize="@dimen/text_12" />

            <TextView
                android:id="@+id/tvSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cvWalletContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llHistoryContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/window_background"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:paddingStart="8dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/transaction_id"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/amount"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/status"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:gravity="end"
                        android:paddingStart="10dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_remove" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvRequestedData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/window_background" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvHistoryPlaceholder"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/no_requested_history"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_22"
                android:textStyle="bold"
                android:visibility="gone" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>